<resources>
    <string name="app_name">红包乐</string>
    <string name="error_msg">Error occurred</string>
    <string name="empty_msg">暂无数据</string>
    <string name="red_envelope">红包乐</string>
    <string name="billboard">排行榜</string>
    <string name="explore">发现</string>
    <string name="mine">我</string>
    <string name="luck_billboard">幸运手气榜</string>
    <string name="explore_one">精品特卖</string>
    <string name="explore_two">天猫淘宝优惠券</string>
    <string name="explore_three">今日奇趣</string>
    <string name="explore_four">热们应用</string>
    <string name="buy_luck_card">购买福卡</string>
    <string name="buy_vip">购买VIP</string>
    <string name="view_history">浏览记录</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="helping_center">帮助中心</string>
    <string name="red_envelope_sponsor">红包赞助</string>
    <string name="settings">设置</string>
    <string name="sing_in">一键登录</string>
    <string name="withdrawal">提现</string>
    <string name="time_left">福卡剩余时间</string>
    <string name="luck_card_left">剩余福卡%1$d张</string>
    <string name="day_red_envelope_count">日红包数</string>
    <string name="week_red_envelope_count">周红包数</string>
    <string name="month_red_envelope_count">月红包数</string>
    <string name="total_red_envelope_count">累计红包</string>
    <string name="day_billboard">日榜</string>
    <string name="week_billboard">周榜</string>
    <string name="month_billboard">月榜</string>
    <string name="total_count">累计:%1$d个</string>
    <string name="total_luck_count">手气前三:%1$d次</string>
    <string name="total_amount">共抢到￥%1$s</string>
    <string name="normal_room">普通房间</string>
    <string name="vip_room">VIP房间</string>
    <string name="room_id">ID:%1$d</string>
    <string name="room_red_envelope_count">%1$d个</string>
    <string name="room_user_count">%1$d人</string>
    <string name="luck_card_unit">&#160;张</string>
    <string name="total_price">总价:</string>
    <string name="buy_now">立即购买</string>
    <string name="luck_card_tip">提醒：\n福卡是进入红包房间抢红包的唯一“钥匙”并且有时效性</string>
    <string name="luck_card_tutorial">福卡教程</string>
    <string name="buy_luck_card_tip">提醒：\n福卡部分时长，每购买一次统称为一张，购买多张会提价时长。</string>
    <string name="withdrawal_tip">提醒：\n现在的口令有时效性，若提现成功将自动从月总扣除，若提现不成功将失效，需要重新获取，口令的有效期为10分钟</string>
    <string name="vip_price">%1$s&#160;&#160;&#160;%2$s元/月</string>
    <string name="red_envelope_history">红包记录</string>
    <string name="filter">筛选</string>
    <string name="start_snatch">开抢</string>
    <string name="enter">进入</string>
    <string name="locked">锁定</string>
    <string name="no_room_billboard_yet">本房间暂无红包排行旁</string>
    <string name="vip_privilege">会员特权</string>
    <string name="red_envelope_hot">红包头条</string>
    <string name="view_it">查看</string>
    <string name="luck_card">福卡</string>
    <string name="luck_card_history">福卡记录</string>
    <string name="luck_card_buy_total">共购买%1$d张</string>
    <string name="luck_card_present_total">共赠送%1$d张</string>
    <string name="luck_card_time_total">总计:%1$d分钟</string>
    <string name="apply_withdrawal">申请提现</string>
    <string name="my_balance">我的现金红包</string>
    <string name="withdrawal_tutorial">提现教程</string>
    <string name="withdrawal_history">提现记录</string>
    <string name="clear">清空</string>
    <string name="withdrawal_expired">口令已过期</string>
    <string name="withdrawal_success">提现成功</string>
    <string name="quick_sign_in">快速登录</string>
    <string name="need_sign_in">抢红包需要登录否则系统无法完成提现</string>
    <string name="we_chat_sign_in">使用微信快速登录</string>
    <string name="sign_in">登录</string>
    <string name="create_room">创建房间</string>
    <string name="room_name">房间名称</string>
    <string name="room_name_hint">不能超过10个字符</string>
    <string name="room_announcement">房间公告</string>
    <string name="room_announcement_hint">不能超过100个字符</string>
    <string name="coupon_price">券后价:%1$s</string>
    <string name="sale_count">销量:%1$d</string>
    <string name="copy_token">重复复制口令&#160;&#160;&#160;&#160;剩余%1$ds</string>
    <string name="vip_withdrawal_msg">VIP用户最低提现金额为50元</string>
    <string name="none_vip_withdrawal_msg">普通用户最低提现金额为100元</string>
    <string name="room_id_label">房间ID</string>
    <string name="no_search_history">没有搜索记录</string>
    <string name="no_search_result">没有搜索结果</string>
    <string name="history_search">历史搜索</string>
    <string name="history_room">房间浏览记录</string>
    <string name="history_goods">商品浏览记录</string>
    <string name="history_video">视频浏览记录</string>
    <string name="recommend_goods">宝贝推荐</string>
    <string name="search_room_hint">请输入房间ID</string>
    <string name="search">搜索</string>
    <string name="one_key_copy">一键复制</string>
    <string name="withdrawal_token">提现口令</string>
    <string name="copied">已复制</string>
    <string name="total_red_envelope_amount">累计金额</string>
    <string name="only_vip_can_create_room">只有VIP用法才可以创建房间</string>
    <string name="insufficient_luck_card">福卡不足</string>
    <string name="insufficient_luck_card_msg">只有持有福卡的用户才能抢红包</string>
    <string name="receive_free">免费领取</string>
    <string name="joined_msg">你是第%1$d位加入本房间</string>
    <string name="receive_free_luck_card">免费领福卡</string>
    <string name="red_envelope_snatched_buy_others">抱歉，你来晚了，这个红包已经被抢光了</string>
    <string name="red_envelope_snatched_buy_you">这个红包已经被你抢过了</string>
    <string name="brand_red_envelope">品牌红包</string>
    <string name="hot_news">热门资讯</string>
    <string name="change">换一批</string>
    <string name="guess_your_like">猜你喜欢</string>
    <string name="delete_room_member">删除房间成员</string>
    <string name="delete">删除</string>
    <string name="re_select">重选</string>
    <string name="selected_member">已选择%1$d名</string>
    <string name="room_luck_billboard">本群手气排行榜</string>
    <string name="invite_friend">邀请好友进入</string>
    <string name="invite_friend_2">邀请好友</string>
    <string name="be_a_vip">成为VIP</string>
    <string name="your_are_kicked">你已被踢出房间</string>
    <string name="room_title">%1$s(%2$d人)</string>
    <string name="view_more">查看更多 >></string>
    <string name="exit_room">退出房间</string>
    <string name="room_now_member_count">当前人数(%1$d人)</string>
    <string name="luckiest_times">手气最佳%1$d次</string>
    <string name="brand_coupon">品牌优惠券</string>
    <string name="snatched_success_msg">你抢到了，赶快邀请好友也来抢吧！</string>
    <string name="snatched_success_msg_2">红包已存入账户，可直接提现</string>
    <string name="luckiest">手气最佳</string>
    <string name="luckier">手气很好</string>
    <string name="lucky">手气一般</string>
    <string name="snatch_summary_one">已领取%1$d个，共%2$d个</string>
    <string name="snatch_summary_two">你是第%1$d个领取</string>
    <string name="crash_red_envelope">现金红包</string>
    <string name="receive_success">你已成功领取</string>
    <string name="origin_price">原价:%1$s</string>
    <string name="coupon_amount">优惠券:%1$s</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="user_canceled">用户取消</string>
    <string name="auth_denied">没有权限</string>
    <string name="pay_result">支付结果</string>
    <string name="yuan">元</string>
    <string name="minutes">%1$d分钟</string>
    <string name="turn_off_msg">关闭后不会接收消息</string>
    <string name="turn_on_zip">开启节省流量模式</string>
    <string name="msg_notification">红包推送提醒</string>
    <string name="clean_cache">清除缓存</string>
    <string name="sign_out">退出</string>
    <string name="cache_cleared">缓存已清除</string>
    <string name="receive_luck_card_success">你已经成功领取%1$d秒福卡时间</string>
    <string name="play_count">%1$d次播放</string>
    <string name="share_failed">分享失败</string>
    <string name="message">消息</string>
    <string name="your_invite_id">你的邀请id</string>
    <string name="your_invite_qr_code">专属邀请二维码</string>
    <string name="invite_now">立即邀请</string>
    <string name="confirm">确定</string>
    <string name="skip">跳过</string>
    <string name="invited_success">你已成功获得福卡一张</string>
    <string name="invite_you">若是被好友邀请下载本软件，可填写他的邀请码，让其获得一张福卡</string>
    <string name="invite_tip">提醒：\n1、邀请好友使用《红包乐》软件可以免费获得福卡，福卡剩余时间即位停留于房间的时间；\n2、普通用户没邀请一个好友加入可活动（价值2元60分钟）的福卡一张；\n3、VIP账户没邀请一个好友加入可获得（价值2元60分钟）的福卡两张；</string>
</resources>
