<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.SignInDialogFragment">

    <TextView
        style="@style/TextAppearance.AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_sign_in"
        android:textColor="@color/colorTextBlack" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/we_chat_logo" />

    <TextView
        style="@style/TextAppearance.AppTheme.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/need_sign_in"
        android:textColor="@color/colorTextBlack" />

    <TextView
        style="@style/TextAppearance.AppTheme.Micro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/we_chat_sign_in"
        android:textColor="@color/colorTextLightGray" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_button_medium_bg"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />
</LinearLayout>