<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/explore_one"
        android:textColor="@color/colorTextBlack" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/explore_two"
        android:textColor="@color/colorTextBlack" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/explore_three"
        android:textColor="@color/colorTextBlack" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/explore_four"
        android:textColor="@color/colorTextBlack" />
</LinearLayout>