<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_view_more_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/view_more"
        android:textAppearance="@style/TextAppearance.AppTheme.Small"
        android:textColor="@color/colorTextBlack"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorDivider" />

    <TextView
        android:id="@+id/tv_room_luck_billboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="16dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/room_luck_billboard"
        android:textAppearance="@style/TextAppearance.AppTheme"
        android:textColor="@color/colorTextBlack" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <TextView
        android:id="@+id/tv_invite_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="16dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/invite_friend"
        android:textAppearance="@style/TextAppearance.AppTheme"
        android:textColor="@color/colorTextBlack" />

    <View
        android:id="@+id/v_be_a_vip_divider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorDivider"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_be_a_vip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="16dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/be_a_vip"
        android:textAppearance="@style/TextAppearance.AppTheme"
        android:textColor="@color/colorTextBlack"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorDivider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_exit_room"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_big_bg"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:text="@string/exit_room"
            android:textColor="@android:color/white" />
    </FrameLayout>
</LinearLayout>