<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.room.LuckCardInsufficientFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextAppearance.AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/insufficient_luck_card"
            android:textColor="@color/colorTextBlack" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_close" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/luck_card_insufficient" />

    <TextView
        style="@style/TextAppearance.AppTheme.Micro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insufficient_luck_card_msg"
        android:textColor="@color/colorTextGray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_receive_free"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/shape_button_medium_green_bg"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/receive_free"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_buy_now"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/shape_button_medium_bg"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/buy_now"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>