<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.mine.BuyVipActivity">

    <include layout="@layout/navigation_top_bar" />

    <ImageButton
        android:id="@+id/iv_room_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/shape_add_avatar_bg" />

    <TextView
        style="@style/TextAppearance.AppTheme.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_name"
        android:textColor="@color/colorTextBlack" />

    <EditText
        android:id="@+id/et_room_name"
        style="@style/TextAppearance.AppTheme"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/room_name_hint"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorTextBlack"
        android:textColorHint="#ffd0d0d0" />

    <TextView
        style="@style/TextAppearance.AppTheme.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_announcement"
        android:textColor="@color/colorTextBlack" />

    <EditText
        android:id="@+id/et_room_announcement"
        style="@style/TextAppearance.AppTheme"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:ems="13"
        android:gravity="center_vertical"
        android:hint="@string/room_name_hint"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorTextBlack"
        android:textColorHint="#ffd0d0d0" />

    <Button
        android:id="@+id/btn_create_room"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_button_medium_bg"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/create_room"
        android:textColor="@android:color/white" />
</LinearLayout>