<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_decrease"
            android:minHeight="0dp"
            android:minWidth="0dp" />

        <TextView
            android:id="@+id/tv_buy_luck_card_count"
            style="@style/TextAppearance.AppTheme"
            android:layout_width="40dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:textColor="@color/colorTextBlack" />

        <Button
            android:id="@+id/btn_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_increase"
            android:minHeight="0dp"
            android:minWidth="0dp" />

        <TextView
            style="@style/TextAppearance.AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luck_card_unit"
            android:textColor="@color/colorTextBlack" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            style="@style/TextAppearance.AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@color/colorTextBlack" />

        <TextView
            android:id="@+id/tv_total_price"
            style="@style/TextAppearance.AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextBlack"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDivider"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/btn_buy_now"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_button_big_bg"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/buy_now"
            android:textColor="@android:color/white" />

        <TextView
            style="@style/TextAppearance.AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/buy_luck_card_tip"
            android:textColor="@color/colorTextBlack" />
    </LinearLayout>
</LinearLayout>