<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.room.RedEnvelopeSnatchedEmptyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorDarkRed">

        <ImageButton
            android:id="@+id/btn_top_bar_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/brand_red_envelope"
            android:textAppearance="@style/TextAppearance.AppTheme.Medium"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkRed">

        <TextView
            style="@style/TextAppearance.AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="16dp"
            android:drawableTop="@drawable/ic_cry"
            android:text="@string/red_envelope_snatched_buy_others"
            android:textColor="#ffe7ae" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_advertisement_content"
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_news"
            android:textAppearance="@style/TextAppearance.AppTheme"
            android:textColor="@color/colorTextBlack" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textAppearance="@style/TextAppearance.AppTheme"
            android:textColor="@color/colorTextLightGray" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_videos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white" />
</LinearLayout>